<resources>
    <string name="app_name">Parcial</string>
    <string name="soy_introvertido_y_me_gustan">Soy introvertido y me gustan</string>
    <string name="bastante_los_video_juegos_sobre">bastante los video juegos, sobre</string>
    <string name="nac_el_21_11_2001_en_sincelejo">Nací el 21/11/2001, en Sincelejo,</string>
    <string name="pero_casi_siempre_he_vivido_en">pero casi siempre he vivido en</string>
    <string name="mi_nombre_es_omar_david">Mi nombre es Omar David</string>
    <string name="medina_patr_n_tengo_19_a_os">Medina Patrón, tengo 19 años.</string>
    <string name="cartagena">Cartagena.</string>
    <string name="todo_el_free_fire">todo el free fire.</string>
    <string name="todo">todo</string>
    <string name="Todo">TODO</string>
    <string name="TODO">TODO</string>
    <string name="omar">omar</string>
</resources>